# thesis_seismology

./: .gitignore  .pre-commit-config.yaml  README.md  cluster-traning.md  initial_analysis.ipynb  mlflow_testing_nb.ipynb  mlruns.db  pyproject.toml
configs/: config.yaml
configs/augmentations/: all_aug.yaml
configs/model/: model_config.yaml
mlruns/153534368826863734/: meta.yaml
mlruns/153534368826863734/247e6acd98434d53bf6aa2b691c2498e/: meta.yaml
mlruns/153534368826863734/a56874f8bc9c4ecbb1dc8e9f3201f09b/: meta.yaml
mlruns/153534368826863734/b7eeb86188d64c8d964d98473ae4b4eb/: meta.yaml
mlruns/153534368826863734/b8655ed3b0074b5597bf44576d22fb17/: meta.yaml
mlruns/195267176971708698/: meta.yaml
mlruns/195267176971708698/9388daca70aa40c1bfe8a502ed982cf1/: meta.yaml
mlruns/195267176971708698/9a9ed9d73898431395d2eb1f7b811117/: meta.yaml
mlruns/232554606776605272/: meta.yaml
mlruns/232554606776605272/42e38b87b0494705b76dba927d2f539e/: meta.yaml
mlruns/282425757216478169/: meta.yaml
mlruns/472068372883095715/: meta.yaml
mlruns/722061464526109596/: meta.yaml
mlruns/810686115542675644/: meta.yaml
mlruns/826018466947722718/: meta.yaml
notebooks/: evaluation.ipynb  initial_analysis.ipynb
src/: main.py
src/augmentation_automated/: dataset_generator_augmented.py
src/configs/: config.yaml
src/configuration_automated/: dataset_configuration.py
src/metrics/: callbacks.py  evaluation_metrics.py
src/seisbench_training/: generate_eval_target.py  main.py  pydantic_export.py  training_results.py
src/utils/: model_utils.py
(+427 files in other folders)
