[project]
name = "seisbench-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Khuzaima Aziz", email = "mail@address.com" }]
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.26",
    "pytorch-lightning>=2.5.5",
    "seisbench>=0.10",
    "torch>=2.8",
    "typer>=0.17.4",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.3"]

[project.scripts]
seisbench-training = "seisbench_training.main:main"



[tool.setuptools.package-data]
seisbench_training = ["configs/*", "configs/**/*.yaml"]


[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
